--- a/app/views/authentication/adindex.scala.html
+++ b/app/views/authentication/adindex.scala.html
@@ -21,11 +21,12 @@
    		   @loginForm.globalError.message
    		</p>
    		}
+   		<div id="login_foam">
         @form(routes.AuthController.adauthenticate()) {
         <a  id="tab"><div id="name" tabindex="1">@inputText(loginForm("username"))</div></a>
         <a  id="tab"><div id="name" tabindex="2">@inputPassword(loginForm("password"))</div></a>
-
-        <input type="submit"value="Login">
+</div>>
+        <input type="submit"value="Login"  class="submit-button">
         }
         </div>
 
