--- a/app/views/template/sateiT.scala.html
+++ b/app/views/template/sateiT.scala.html
@@ -84,9 +84,8 @@
 				<td class="department">@emp.get(i).department_id.department_name</td>
 				<td class="employees">@emp.get(i).name</td>
 				<td class="count">@emp.get(i).receiver.size</td>
-
-				<th class="syosai"><form name="syousai" action="@routes.TestController.syousai()" target="iframe" method="POST">
-				<input type="hidden" name="CardNumber" value="@emp.get(i).employees_id" /><input type="submit" value="詳細" /></form></th>
+				<th class="syosai"><form name="syousai" action="@routes.HomeController.valuation_detailedPost" target="_blank" method="POST">
+				<input type="hidden" name="user_id" value="@emp.get(i).employees_id" /><input type="submit" value="詳細" /></form></th>
 			</tr>
 
 		}
