--- a/app/views/valuation.scala.html
+++ b/app/views/valuation.scala.html
@@ -5,6 +5,18 @@
 @emp = @{models.Employees.find.all}
 @onSideMenu("査定")(""){
 	<link rel="stylesheet" href="@routes.Assets.versioned("/stylesheets/ichiran.css")">
+	<script type="text/javascript">
+		function open_detailed(f) {
+			f.target="detaild";
+			var w = window.open("about:blank", f.target,"width=600,height=450") ;
+			window.document.inform.action = "@routes.HomeController.valuation_detailed()" ;
+			w.forcus();
+			f.submit();
+		}
+		function submitFunc(){
+		var nWin=window.open("@routes.HomeController.valuation_detailedPost()","hoge","width=300,height=300");
+		}
+	</script>
 	}{
 	<h2>査定</h2>
 	@sateiT(emp)(par)(pos)
