--- a/app/views/valuation_detailed.scala.html
+++ b/app/views/valuation_detailed.scala.html
@@ -1,99 +1,21 @@
+@(gc : List[Gratitude_Card])(par : String)(pos : Map[String,Array[String]])(emp: Employees)
 @import views.html.template._
 
 @template("査定詳細画面"){
+	<link rel="stylesheet" href="@routes.Assets.versioned("/stylesheets/ichiran.css")">
 	}{
 <link rel="stylesheet" href="@routes.Assets.versioned("stylesheets/valuation.css")">
 
 <table border ="1">
-                   <tr><td><label for="name">対象者:</label></td><td><label for="name">石川次郎</label></td></tr>
-                   <tr><td><label for="name">社員ＩＤ：</label></td><td><label for="name"></label></td></tr>
+                   <tr><td><label for="name">対象者:</label></td><td><label for="name">@emp.name</label></td></tr>
+                   <tr><td><label for="name">社員ＩＤ：</label></td><td><label for="name">@emp.employees_cd</label></td></tr>
 </table>
-					<h1>査定詳細</h1>
+					<h1>査定詳細</h1><br>
+					<div class="count">受信件数: @gc.size 件</div>
 
-					<form action="conf.php" method="post">
-					<dl>
-                         <form action="cgi-bin/formmail.cgi" method="post">
-<table border="1" id="table_table">
-<tr>
-<td>
-<table border ="1" id="table_busyo">
-<tr><td></td>   <td> <label for="name">送信部署</label></td></tr>
-<tr><td><label for="name">検索</label></td>
-                         <td>
-                         <select name="送信部署">
-                         <option selected="selected"></option>
-                         <option value="開発部" >開発部</option>
-                         <option value="営業部">営業部</option>
-                         <option value="人事部">人事部</option>
-                         <option value="その他">その他</option>
-                         </select></td>
-     </table>
-</td>
-<td>
-<table border ="1" id="table_day">
-                        <p>
-                          <tr>
-                          <td>
-                            <label for="name">日付</label>
-                            </td>
-                          </tr>
-                          <tr>
-                          <td>
-                       <select mame="年">
-                       <option value="年" >2016</option>
-                       </select>
-
-                       <select mame="月">
-                       <option value="月" >11</option>
-                       </select>
-
-                       </select>
-                       <select mame="日">
-                        <option value="日" >19</option>
-                        </select>
-	                    <label for="name">から</label>
-
-
-
-                        <select mame="年">
-                        <option value="年" >2016</option>
-                        </select>
-                        <select mame="月">
-                        <option value="月" >12</option>
-                        </select>
-                        <select mame="日付">
-                        <option value="日" >19</option>
-                        </select>
-                        <label for="name">まで</label>
-                        </td>
-</tr>
-
-</table>
-</td>
-
-<td>
-<table border ="1" id="table_category">
-<tr>
-    <td>                    <label for="name">カテゴリ</label></td>
-<td>
-                          <select name="カテゴリ">
-                         <option selected="selected"></option>
-                         <option value="デバック関係" >デバック関係</option>
-                         <option value="営業関係">営業関係</option>
-                         <option value="残業関係">残業関係</option>
-                         <option value="その他">その他</option>
-                         </select></td>
-</tr>
-</table>
-                          </form>
-                          </td>
-</tr>
-</table>
-
-
-
-
-
+	<form name="selectForm" action="@routes.HomeController.valuation_detailedPost()" method="POST">
+	<input type="hidden" name="user_id" value="@emp.employees_id" />
+		@ichiran(gc)(par)("日付範囲"::"送信部署" :: "送信者" :: "カテゴリ" :: "タイトル" :: "日付"  :: Nil)(pos)
 	}
 
 
