--- a/app/views/template/onSideMenu.scala.html
+++ b/app/views/template/onSideMenu.scala.html
@@ -13,7 +13,7 @@
 
      <div id="button-box">
      <table class="sidemenu-table"  cellspacing="0" cellpadding="0">
-
+	<tr><td><div class="System_name" ><a  id="Greeting">感謝カードシステム</a></div></td></tr>
 	<tr><td><input type="button" value="カード作成"   style="background-image: url('@routes.Assets.versioned("images/hito.png")');      background-repeat:no-repeat;" id="button_submit"  class="hito" onClick="window.open('@routes.HomeController.creation()', '', 'width=500,height=560'); return false;"><br></td></tr>
 	<tr><td><input type="button" value="掲示板"       style="background-image: url('@routes.Assets.versioned("images/bbs.png")');       background-repeat:no-repeat;" id="button_submit"  class="bbs" onClick="location.href='@routes.HomeController.bbs'"><br></td></tr>
 	<tr><td><input type="button" value="受信箱"       style="background-image: url('@routes.Assets.versioned("images/receive.png")');   background-repeat:no-repeat;" id="button_submit" onClick="location.href='@routes.MailController.receive'" class="receive"><br></td></tr>
