--- a/public/stylesheets/sideMenu.css
+++ b/public/stylesheets/sideMenu.css
@@ -49,3 +49,24 @@ background-position:left;
 width:100%;
 height :100%;
 }
+.System_name {
+-webkit-border-radius: 5px;
+-moz-border-radius: 5px;
+background:#8eb4d9;
+color:#ffffff;
+font-size:32px;
+	width:100%;
+height :120%;
+ display: table;
+ 	z-index: 1;
+
+}
+#Greeting{
+
+	border:solid 1px #000000;
+ display: table-cell;
+  vertical-align: middle;
+  text-align: center;
+
+
+}
