--- a/public/stylesheets/sideMenu.css
+++ b/public/stylesheets/sideMenu.css
@@ -56,14 +56,14 @@ background:#8eb4d9;
 color:#ffffff;
 font-size:32px;
 	width:100%;
-height :120%;
+height :120px;
  display: table;
- 	z-index: 1;
+
 
 }
 #Greeting{
 
-	border:solid 1px #000000;
+
  display: table-cell;
   vertical-align: middle;
   text-align: center;
