--- a/app/views/parerr.scala.html
+++ b/app/views/parerr.scala.html
@@ -1,68 +1,19 @@
 
 <HTML><HEAD><TITLE>File Not Found !</TITLE>
+		<link rel="stylesheet" href="@routes.Assets.versioned("stylesheets/error.css")">
 <style>
 <!--
-HTML{
-	scrollbar-3dlight-color: #aaa;
-	scrollbar-arrow-color: #888;
-	scrollbar-base-color:#fff;
-	scrollbar-darkshadow-color: #fff;
-	scrollbar-face-color: #fff;
-	scrollbar-highlight-color:#fff;
-	scrollbar-shadow-color: #aaa;
-	scrollbar-track-color: #fff;
 
-}
-body{
-	font-size: 13px;
-	color: #444;
-	font-family: Verdana;
-	letter-spacing: 1px;
-	background-color: #d7e2ef;
-	margin: 0px;
-	overflow: auto;
-}
-A {color : #D56300; text-decoration : underline; }
-.box{
-	background-color: #fff;
-	border-top: solid 1px #666;
-	border-bottom: solid 1px #666;
-	padding: 10px 30px 60px 30px;
-	margin-top: 50px;
-}
-h1{
-	font-size: 18px;
-	font-family: Verdana;
-	font-weight: normal;
-	letter-spacing: 3px;
-	border-bottom: dashed 1px #666;
-	margin:  10px 0px 50px 0px;
-	padding: 2px 30px 2px 10px;
-}
-h2{
-	font-size: 13px;
-	font-family: Verdana;
-	font-weight: normal;
-	letter-spacing: 2px;
-	margin:  40px 0px 20px 0px;
-	padding: 2px 10px 2px 0px;
-}
-.copyright{
-	font-size: 11px;
-	font-family: Arial;
-	font-weight: normal;
-	text-align: right;
-	margin:  5px 0px 10px 0px;
-	padding: 0px 0px 0px 0px;
-}
+
 .copyright a, .copyright a:link, .copyright a:visited, .copyright a:active {color: #444; text-decoration: none;}
 -->
 </style>
 </HEAD><BODY>
 <div class="box">
-	<h1>ERROR 403 Forbidden</h1>
-	アクセス権限がありません。
-	<h2>権限でログインし直す場合は下記からログアウトしてください</h2>
+	<h1>ERROR 403 <br>　　　　Forbidden!</h1>
+	<h4>申し訳ございません。</h4>
+	<h2>このページへのアクセスは<div class="red">禁止</div>されています。</h2>
+	<h3>権限でログインし直す場合は下記からログアウトしてください</h3>
 
 	<ul>
 				<li><a href="/logout">ログアウト</a></li>
